# avida

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  build_avida  run_tests  rust-migration-execution-playbook.md  rust-migration-full-plan.md  rust-migration-remaining-cpp-static-analysis.md  rust-migration-waves.md  rust-migration-workstream-catalog.md
.claude/: settings.local.json
.cursor/rules/: rust-migration-program-docs.mdc  rust-migration-slice-workflow.mdc
.github/workflows/: ci.yaml  protect-tracking-issues.yaml
avida-core/: CMakeLists.txt
avida-core/include/private/rust/: running_stats_ffi.h
avida-core/source/actions/: EnvironmentActions.cc  LandscapeActions.cc  PopulationActions.cc  PrintActions.cc
avida-core/source/analyze/: cAnalyze.cc  cAnalyze.h  cAnalyzeGenotype.cc  cAnalyzeGenotype.h  cAnalyzeJobQueue.h  cAnalyzeTreeStats_CumulativeStemminess.cc  cAnalyzeTreeStats_CumulativeStemminess.h  cAnalyzeTreeStats_Gamma.cc  cAnalyzeTreeStats_Gamma.h  cGenotypeBatch.cc  cModularityAnalysis.cc  cModularityAnalysis.h  cMutationalNeighborhood.cc  cMutationalNeighborhood.h  cPhenPlastSummary.h
avida-core/source/cpu/: cCPUMemory.h  cCPUStack.cc  cCPUStack.h  cCPUTestInfo.h  cCodeLabel.h  cHardwareBCR.cc  cHardwareBCR.h  cHardwareBase.cc  cHardwareBase.h  cHardwareCPU.cc  cHardwareCPU.h  cHardwareExperimental.cc  cHardwareExperimental.h  cHardwareFFI.cc  cHardwareGP8.cc  cHardwareGP8.h  cHardwareManager.cc  cHardwareManager.h  cHardwareTransSMT.cc  cInstSet.h  cTestCPU.cc  cTestCPU.h  cTestCPUInterface.cc  cTestCPUInterface.h
avida-core/source/data/: Manager.cc  Package.cc  Provider.cc  TimeSeriesRecorder.cc
avida-core/source/main/: cAvidaConfig.cc  cAvidaConfig.h  cBirthChamber.cc  cBirthChamber.h  cBirthDemeHandler.h  cBirthEntry.cc  cBirthEntry.h  cBirthGenomeSizeHandler.h  cBirthGridLocalHandler.h  cBirthMateSelectHandler.h  cBirthMatingTypeGlobalHandler.cc  cBirthMatingTypeGlobalHandler.h  cBirthNeighborhoodHandler.cc  cBirthNeighborhoodHandler.h  cConfigSnapshot.cc  cContextPhenotype.cc  cContextPhenotype.h  cDeme.cc  cDeme.h  cDemeCellEvent.h  cEnvironment.cc  cEnvironment.h  cEventList.cc  cGermline.h  cGradientCount.cc  cGradientCount.h  cLandscape.cc  cMigrationMatrix.cc  cMigrationMatrix.h  cMutationRates.cc  cMutationRates.h  cOrgInterface.h  cOrgMovementPredicate.h  cOrgSensor.cc  cOrgSensor.h  cOrganism.cc  cOrganism.h  cOrganismFFI.cc  cPhenPlastGenotype.h  cPhenPlastUtil.cc  (+30 more)
avida-core/source/script/: cDirectInterpretASTVisitor.cc  cSemanticASTVisitor.cc
avida-core/source/targets/unit-tests/: main.cc
avida-core/source/tools/: AvidaArray.h  cArgContainer.cc  cArgContainer.h  cArgSchema.h  cBitArray.cc  cBitArray.h  cDemeProbSchedule.h  cDoubleSum.h  cHistogram.cc  cHistogram.h  cInitFile.cc  cInitFile.h  cMerit.cc  cMerit.h  cOrderedWeightedIndex.cc  cOrderedWeightedIndex.h  cProbDemeProbSchedule.h  cRunningAverage.cc  cRunningAverage.h  cRunningStats.h  cStringUtil.cc  cStringUtil.h  cUserFeedback.h  cWeightedIndex.cc  cWeightedIndex.h  tBuffer.h  tDataCommandManager.h  tList.h  tMatrix.h  tObjectFactory.h
avida-core/source/viewer/: Map.cc  OrganismTrace.cc  viewer_ffi.cc
avida-core/tests/_testrunner/: testrunner.py
avida-core/tests/analyze_printphenotypes_grouping/: test_list
avida-core/tests/collect_cap/: test_list
avida-core/tests/manager_provider_id_dispatch/: test_list
avida-core/tests/sex/: test_list
avida-core/tests/shaded_green_beard_instructions/: test_list
libs/tcmalloc-1.4/: CMakeLists.txt
rust/avida-rust/: Cargo.toml
rust/avida-rust/abi/: README.md  avd_symbols_baseline.txt
rust/avida-rust/benches/: critical_paths.rs
rust/avida-rust/scripts/: ci_abi_guard.py  ci_coverage_check.sh  ci_ffi_analysis.py  ci_perf_check.py  ffi_error_outparam_policy.md
rust/avida-rust/src/: analyze_helpers.rs  birth.rs  bit_array.rs  code_label.rs  common.rs  config_snapshot.rs  cpu_helpers.rs  cpu_instructions.rs  cpu_registers.rs  cpu_stack.rs  deme_helpers.rs  double_sum.rs  environment_helpers.rs  event_list_helpers.rs  ffi_rng.rs  ffi_string.rs  ffi_vec.rs  gradient.rs  histogram.rs  landscape_helpers.rs  lib.rs  merit.rs  mutation_rates.rs  ordered_weighted_index.rs  package.rs  phenotype.rs  population_action_helpers.rs  population_helpers.rs  population_interface_helpers.rs  print_action_helpers.rs  provider_helpers.rs  registry_types.rs  resource_count_helpers.rs  resource_history_helpers.rs  running_average.rs  running_stats.rs  script_helpers.rs  sensor_helpers.rs  spatial_res_count_helpers.rs  stats_helpers.rs  (+4 more)
rust/avida-viewer/: Cargo.toml
rust/avida-viewer/src/: main.rs  sim_bridge.rs
scripts/: extract_include_graph.py  render_key_files_graph.py
(+252 files in other folders)
