[package]
name = "avida_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[dependencies]
bitvec = "1.0.1"
nom = "8.0.0"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "critical_paths"
harness = false
