[package]
name = "avida-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "avida-viewer-egui"
path = "src/main.rs"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
dbg_macro = "deny"
unwrap_used = "deny"
expect_used = "deny"
